syntax = "proto3";
import "google/protobuf/empty.proto";
package guru.qa.grpc.niffler;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.niffler.grpc";
option java_outer_classname = "NifflerCategoryProto";

service NifflerCategoryService {
  rpc GetAllCategories(CategoriesRequest) returns (CategoriesResponse) {}
  rpc AddCategory (CategoryRequest) returns (CategoryResponse) {}
}

message CategoriesRequest {
  string username = 1;
}

message CategoryRequest {
  string username = 1;
  CategoryReq category = 2;

}

message CategoriesResponse {
  repeated Category categories = 1;
}

message CategoryResponse {
  string username = 1;
  Category category = 2;
}

message Category {
  string username = 1;
  string id = 2;
  string category = 3;
}

message CategoryReq {
  string username = 1;
  string category = 2;
}



